# MerchantTycoon

./: .gitignore  .output.txt  AGENTS.md  LICENSE  Makefile  README.md  merchant_tycoon.py  pyproject.toml
.github/workflows/: auto-tag-minor.yml  auto-tag.yml
docs/: BUILD-BIN.md  BUILD.md  CARGO_SERVICE_REFACTORING.md  CHANGELOG.md  CHANGELOG_RECENT.md  CHANGLOG.md  MAKEFILE.md  SCRIPTS.md
scripts/: version-bump-commit.sh  version-bump.sh
src/merchant_tycoon/: __init__.py  __main__.py  app.py  engine.py  game.py  models.py  savegame.py  style.tcss
src/merchant_tycoon/config/: __init__.py  bank_settings.py  cargo_settings.py  events_settings.py  game_settings.py  investments_settings.py  lotto_settings.py  phone_settings.py  pricing_settings.py  save_ui_settings.py  settings.py  travel_settings.py
src/merchant_tycoon/domain/: __init__.py  assets.py  cities.py  constants.py  game_difficulty_levels.py  goods.py  wordle.py
src/merchant_tycoon/engine/: __init__.py  bank_service.py  contracts.py  game_engine.py  game_state.py  goods_service.py  investments_service.py  modal_queue.py  savegame_service.py  travel_service.py
src/merchant_tycoon/events/: __init__.py  system.py
src/merchant_tycoon/model/: __init__.py  asset.py  bank_account.py  bank_transaction.py  constants.py  good.py  investment_lot.py  loan.py  purchase_lot.py  transaction.py
src/merchant_tycoon/repositories/: __init__.py  assets_repository.py  cities_repository.py  difficulty_repository.py  goods_repository.py  wordle_repository.py
src/merchant_tycoon/ui/: __init__.py  (+3 more)
tests/: conftest.py
(+188 files in other folders)
